# controllers/metricas.go
@@ -19,9 +19,9 @@ func (c *MetricasController) URLMapping() {
 	c.Mapping("MetricasCoevaluacion", c.MetricasCoevaluacion)
 }
 
-// Post ...
-// @Title Create
-// @Description create MetricasHeteroevaluacion
+// MetricasHeteroevaluacion ...
+// @Title MetricasHeteroevaluacion
+// @Description query MetricasHeteroevaluacion
 // @Param	body		body 	models.MetricasHeteroevaluacion	true		"body for MetricasHeteroevaluacion content"
 // @Success 201 {object} models.MetricasHeteroevaluacion
 // @Failure 403 body is empty
@@ -44,9 +44,9 @@ func (c *MetricasController) MetricasHeteroevaluacion() {
 	}
 }
 
-// Post ...
-// @Title Create
-// @Description create MetricasAutoevaluacion
+// MetricasAutoevaluacion ...
+// @Title MetricasAutoevaluacion
+// @Description query MetricasAutoevaluacion
 // @Param	body		body 	models.MetricasAutoevaluacion	true		"body for MetricasAutoevaluacion content"
 // @Success 201 {object} models.MetricasAutoevaluacion
 // @Failure 403 body is empty
@@ -69,9 +69,9 @@ func (c *MetricasController) MetricasAutoevaluacion() {
 	}
 }
 
-// Post ...
-// @Title Create
-// @Description create MetricasCoevaluacion
+// MetricasCoevaluacion ...
+// @Title MetricasCoevaluacion
+// @Description query MetricasCoevaluacion
 // @Param	body		body 	models.MetricasCoevaluacion	true		"body for MetricasCoevaluacion content"
 // @Success 201 {object} models.MetricasCoevaluacion
 // @Failure 403 body is empty
