# swagger/swagger.json
@@ -13,27 +13,58 @@
                 "tags": [
                     "carga_academica"
                 ],
-                "description": "create CargaAcademica",
+                "description": "query CargaAcademica",
                 "operationId": "CargaAcademicaController.PostCargaAcademica",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "body for CargaAcademica content",
+                        "description": "body for Parametros content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CargaAcademica"
+                            "$ref": "#/definitions/models.Parametros"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.CargaAcademica"
+                            "$ref": "#/definitions/models.Parametros"
                         }
                     },
-                    "403": {
+                    "404": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/espacios_academicos/": {
+            "post": {
+                "tags": [
+                    "espacios_academicos"
+                ],
+                "description": "query EspacioAcademico",
+                "operationId": "EspacioAcademicoController.PostEspacioAcademico",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Parametros content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Parametros"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Parametros"
+                        }
+                    },
+                    "404": {
                         "description": "body is empty"
                     }
                 }
@@ -86,7 +117,7 @@
                     "formulario_por_tipo"
                 ],
                 "description": "create PostFormularioTipo",
-                "operationId": "Formulario_por_tipoController.Create",
+                "operationId": "Formulario_por_tipoController.PostFormularioTipo",
                 "parameters": [
                     {
                         "in": "body",
@@ -182,8 +213,8 @@
                 "tags": [
                     "metricas"
                 ],
-                "description": "create MetricasAutoevaluacion",
-                "operationId": "MetricasController.Create",
+                "description": "query MetricasAutoevaluacion",
+                "operationId": "MetricasController.MetricasAutoevaluacion",
                 "parameters": [
                     {
                         "in": "body",
@@ -213,8 +244,8 @@
                 "tags": [
                     "metricas"
                 ],
-                "description": "create MetricasCoevaluacion",
-                "operationId": "MetricasController.Create",
+                "description": "query MetricasCoevaluacion",
+                "operationId": "MetricasController.MetricasCoevaluacion",
                 "parameters": [
                     {
                         "in": "body",
@@ -244,8 +275,8 @@
                 "tags": [
                     "metricas"
                 ],
-                "description": "create MetricasHeteroevaluacion",
-                "operationId": "MetricasController.Create",
+                "description": "query MetricasHeteroevaluacion",
+                "operationId": "MetricasController.MetricasHeteroevaluacion",
                 "parameters": [
                     {
                         "in": "body",
@@ -303,10 +334,6 @@
         }
     },
     "definitions": {
-        "models.CargaAcademica": {
-            "title": "CargaAcademica",
-            "type": "object"
-        },
         "models.MetricasAutoevaluacion": {
             "title": "MetricasAutoevaluacion",
             "type": "object"
@@ -348,6 +375,10 @@
         {
             "name": "carga_academica",
             "description": "CargaAcademicaController operations for CargaAcademica\n"
+        },
+        {
+            "name": "espacios_academicos",
+            "description": "EspacioAcademicoController operations for EspacioAcademico\n"
         }
     ]
 }
